--- a/tmux.conf
+++ b/tmux.conf
@@ -68,68 +68,39 @@ set-option -g default-shell /bin/zsh
 # Set base to 1
 set -g base-index 1
 
-# Enable UTF-8 support in status bar
-set -g status on
-set -g status-utf8 on
-
 # Increase scrollback lines
 set -g history-limit 30000
 
-# Renumber windows automatically after removing a window
-# Prevents my OCD and means I don't have to manually run {move|swap}-window
-set-option -g renumber-windows on
+# This tmux statusbar config was created by tmuxline.vim
+# on Wed, 27 Jan 2016
+set -g status-bg "colour18"
+set -g message-command-fg "colour19"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status "on"
+set -g pane-active-border-fg "colour4"
+set -g message-bg "colour7"
+set -g status-right-length "100"
+set -g status-right-attr "none"
+set -g message-fg "colour19"
+set -g message-command-bg "colour7"
+set -g status-attr "none"
+set -g status-utf8 "on"
+set -g pane-border-fg "colour7"
+set -g status-left-attr "none"
+setw -g window-status-fg "colour7"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour18"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour4"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour18"
+set -g status-left "#[fg=colour18,bg=colour10,bold] #S #[fg=colour10,bg=colour18,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour7,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour7] %Y-%m-%d  %H:%M #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour4] #h "
+setw -g window-status-format "#[fg=colour7,bg=colour18] #I #[fg=colour7,bg=colour18] #W "
+setw -g window-status-current-format "#[fg=colour18,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour7] #I #[fg=colour19,bg=colour7] #W #[fg=colour7,bg=colour18,nobold,nounderscore,noitalics]"
 
-# Colour reference...
-
-# Light Blue = 31
-# Dark Grey  = 234
-# Light Grey = 240
-# White      = 254
-
-# sets right side of the status bar to look bit nicer
-#set -g status-right '#[fg=colour234,bg=white,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour234] %a #[fg=colour247,bg=colour234] #[fg=colour247,bg=colour234] %b %d  %R #[fg=colour252,bg=colour234,nobold,nounderscore,noitalics]#[fg=red,bg=colour234]#[fg=white,bg=red] #H'
-
-# sets status bar background colour
-#set -g status-bg white
-
-# positions each window name to the left most edge of the status bar
-#set -g status-justify 'left'
-
-# sets default pane border colour
-#set -g pane-border-fg white
-
-# highlights border of current pane
-#set -g pane-active-border-fg red
-
-# sets status bar background colour when executing a command via command-line mode
-#set -g message-bg red
-
-# sets colour of status bar font in command-line mode
-#set -g message-fg white
-
-# adds separator (in this case some extra breathing space around the list of windows)
-#setw -g window-status-separator '  '
-
-# sets design of current window listed in the status bar
-#setw -g window-status-current-format '#[fg=colour231,bg=colour31,bold] #I  #W #[fg=colour31,bg=white,nobold,nounderscore,noitalics]'
-
-# Explanation of settings I don't use...
-#
-# sets background colour of status bar when you try to ESC command-line mode:
-# set -g message-command-bg 'colour31'
-#
-# sets colour of status bar font in default mode:
-# setw -g window-status-fg black
-#
-# sets the background colour of the window listed in the status bar:
-# setw -g window-status-bg 'colour234'
-#
-# sets default design around each window listed in the status bar:
-# setw -g window-status-format '#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]'
-#
-# sets left side information of status bar:
-# set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour237,bg=colour240] #F #[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #W #[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]'
-
+# Set terminal title
 set -g set-titles on
-
+set -g set-titles-string "#T"
 # }}}
