--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ bind-key s split-window -v
 # Reload tmux config
 # Same as in command mode :source-file ~/tmux.conf
 # Or outside of tmux with `tmux source-file ~/tmux.conf`
-bind-key r source-file ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf
 
 # Allow Ctrl+k to clear the history
 bind-key -n C-k clear-history
@@ -104,3 +104,14 @@ setw -g window-status-current-format "#[fg=colour18,bg=colour7,nobold,noundersco
 set -g set-titles on
 set -g set-titles-string "#T"
 # }}}
+
+# plugins {{{
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+# }}}
+
+# vim:foldmethod=marker:foldlevel=0
