Vim and tmux conf minor improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -93,7 +93,7 @@ setw -g window-status-activity-fg "colour4"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour18"
 set -g status-left "#[fg=colour18,bg=colour10,bold] #S #[fg=colour10,bg=colour18,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour7,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour7] %Y-%m-%d  %H:%M #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour4] #h "
+set -g status-right "#[fg=colour7,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour7] %Y-%m-%d  %H:%M #[bg=colour7,nobold,nounderscore,noitalics]#{cpu_fg_color}#{cpu_bg_color}#[fg=colour19]#{cpu_percentage}   #[fg=colour4,nobold,nounderscore,noitalics]#{cpu_bg_color}#[fg=colour18,bg=colour4] #h "
 setw -g window-status-format "#[fg=colour7,bg=colour18] #I #[fg=colour7,bg=colour18] #W "
 setw -g window-status-current-format "#[fg=colour18,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour7] #I #[fg=colour19,bg=colour7] #W #[fg=colour7,bg=colour18,nobold,nounderscore,noitalics]"
 
@@ -106,6 +106,9 @@ set -g set-titles-string "#T"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
