--- a/.gitmodules
+++ b/.gitmodules
@@ -10,12 +10,12 @@
 [submodule "zsh_custom/plugins/zsh-syntax-highlighting"]
 	path = zsh_custom/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
-[submodule "zsh_custom/themes/powerlevel9k"]
-	path = zsh_custom/themes/powerlevel9k
-	url = https://github.com/bhilburn/powerlevel9k.git
 [submodule "base16-shell"]
 	path = base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "zsh_custom/themes/powerlevel9k"]
+	path = zsh_custom/themes/powerlevel9k
+	url = https://github.com/Powerlevel9k/powerlevel9k
