--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,9 +1,7 @@
 {
     "tsserver.npm": "/usr/bin/npm",
-    "rust-analyzer.serverPath": "/usr/bin/rust-analyzer",
     "coc.preferences.colorSupport": true,
     "diagnostic.errorSign": "✘",
     "diagnostic.warningSign": "",
-    "diagnostic.infoSign": "",
-    "python.jediEnabled": false
+    "diagnostic.infoSign": ""
 }
